--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ writable/uploads/*
 writable/debugbar/*
 !writable/debugbar/.gitkeep
 
+public/debugbar/*
+!writable/debugbar/.gitkeep
+
 php_errors.log
 
 #-------------------------
